<resources>
    <string name="app_name">mintic_c4</string>
    <string name="btn_Acceder">Acceder</string>
    <string name="btn_Registro">Registro</string>
    <string name="btn_Geolocalizacion">Geolocalización</string>
    <string name="btn_Guardar">Guardar</string>
    <string name="Geolocalizacion">Geolocalización</string>
    <string name="ESTABLECIMIENTO">ESTABLECIMIENTO</string>
    <string name="PROPIETARIO">PROPIETARIO</string>
    <string name="DIRECCION">DIRECCIÓN</string>
    <string name="CONTACTO">CONTACTO</string>
    <string name="latitud">Latitud</string>
    <string name="Longitud">Longitud</string>
    <string name="tienda1">LORÉAL</string>
    <string name="nombre1">Jose Enrique Artinieguas </string>
    <string name="tienda2">Mercados modernos</string>
    <string name="nombre2">Angelica Castillo </string>
    <string name="tienda3">Papelería Jose</string>
    <string name="nombre3">Alexander Buelvas </string>
    <string name="tienda4">Jenos pizza</string>
    <string name="nombre4">Erick Bustos </string>


</resources>