<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F0D7"
    tools:context=".Listado_DatosActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="209dp"
        android:layout_height="26dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="384dp"
        android:text="@string/nombre4"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="209dp"
        android:layout_height="26dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="124dp"
        android:text="@string/nombre2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="209dp"
        android:layout_height="26dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="248dp"
        android:text="@string/nombre3"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginTop="532dp"
        android:background="@drawable/btn_tienda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_imagen"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_large" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/btn_tienda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_imagen"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/btn_tienda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_imagen"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/btn_tienda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_imagen"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="205dp"
        android:layout_height="34dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="592dp"
        android:text="@string/tienda1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="211dp"
        android:layout_height="31dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="116dp"
        android:text="@string/tienda2"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="229dp"
        android:layout_height="21dp"
        android:layout_marginTop="100dp"
        android:text="@string/tienda3"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="153dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="204dp"
        android:text="@string/tienda4"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.84" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="209dp"
        android:layout_height="26dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="12dp"
        android:text="@string/nombre1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>